Fixed spacing between .project-section a elements

--- a/assets/style.css
+++ b/assets/style.css
@@ -84,7 +84,7 @@ body {
     background-color: var(--main-color);
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-between;
     padding: 5rem 15rem;
     margin: 0;
     border-bottom: solid black 1px;
@@ -97,7 +97,7 @@ body {
 .project-info a {
     background-color: var(--accent-color);
     display: block;
-    width: 50%;
+    width: 49.75%;
     padding: 25px;
     margin: 5px 0 0 0;
     border: solid var(--extra-color) 5px;
